--- a/style.css
+++ b/style.css
@@ -1,5 +1,110 @@
+/* importação de fonte */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
-/* Versão Mobile */
-@media screen and (max-width:1040px) {
-  
+
+/* resetar o css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+  display: flex;
+  border: 2px solid red;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #ecf0f1;
+}
+
+.content {
+  background-color: #fff;
+  border-radius: 15px;
+  width: 80%;
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.content::before {
+  content:"";
+  position: absolute;
+  background-color: #58af9b ;
+  width: 40%;
+  height: 100%;
+
+}
+
+.title {
+  color: #fff;
+  font-size: 28px;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.title-primary{
+  color: #fff;
+}
+
+.description {
+  font-size: 14px;
+  font-weight: 300;
+  color: #fff;
+  line-height: 30px;
+}
+
+.btn {
+  border-radius: 15px;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 10px;
+  padding: 10px 50px;
+  cursor: pointer;
+  font-weight: bold;
+
+}
+
+.btn-primary {
+background-color: transparent;
+  border: 1px solid #fff;
+}
+
+.btn-primary:hover{
+  background: #fff;
+  color: #58af9b;
+}
+
+.first-content {
+  display: flex;
+}
+
+.first-column {
+  text-align: center;
+  flex: 1 0 auto;
+  z-index: 10;
+}
+
+.second-column {
+  flex: 2 0 auto
+}
+
+.list-social-media {
+  display: flex;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.second-content{
+  position: absolute;
+  display: none;
 }
