--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 100vh;
   background-color: #ecf0f1;
 }
 
@@ -40,7 +40,7 @@ body {
   height: 100%;
   border-radius: 15px;
 
-  left: 60%;
+  /* left: 60%; */
 }
 
 .title {
@@ -86,13 +86,14 @@ body {
   align-self: center;
   border: none;
   margin: 15px; 
+  
 }
 
 .btn-primary {
   background-color: transparent;
   border: 1px solid #fff;
   margin: 15px;
-
+  transition: background-color 0.3s;
 }
 
 .btn-primary:hover{
@@ -104,6 +105,7 @@ body {
   background-color: #58af9b;
   border: 1px solid  #58af9b;
   margin: 10px;
+  transition: background-color 0.3s;
 }
 
 .btn-second:hover {
@@ -114,17 +116,21 @@ body {
 
 .first-content {
   display: flex;
-  display: none;
+  /* display: none; */
+}
+
+.first-content .second-column {
+  z-index: 12;
 }
 
 .first-column {
   text-align: center;
-  flex: 1 0 auto;
+  width: 40%;
   z-index: 10;
 }
 
 .second-column {
-  flex: 2 0 auto;
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -191,7 +197,7 @@ body {
   color: #7f8c8d;
   padding: 0 5px;
 }
-
+ 
 
 /* SECOND CONTENT */
 .second-content{
